--- a/journal/201907.md
+++ b/journal/201907.md
@@ -2,22 +2,20 @@
 
 ![{alt text}](../img/{file.jpg} "{hover tooltip text}")
 
-{introduction, major news of the month ordered by impact}
-
 Major news of July:
 
-* Draft of the DEX spec was released - an important milestone on the route to refresh the crypto exchange experience.
+* Draft of the DEX spec was released - an important milestone on the path to refresh the crypto exchange experience.
 * {Python library release and proposal}
 * {new dcrdata features}
 * {social media activity}
 * {excellent DiD 4-5}
-* {blockhead thesis?}
+* {blockhead thesis? is it big?}
 
 ## Development
 
 [dcrd](https://github.com/decred/dcrd): Optimizations and infrastructure additions for various planned upcoming features, code maintenance, bug fixes.
 
-New major versions [rpcclient](https://github.com/decred/dcrd/pull/1807), [database](https://github.com/decred/dcrd/pull/1799), [blockchain/stake](https://github.com/decred/dcrd/pull/1803) and [dcrjson](https://github.com/decred/dcrd/pull/1779) modules were introduced to take advantage of recent improvements in other modules. The new dcrjson module saw a significant overhaul, while retaining a backwards compatible API. This will allow consumer modules to pick up the majority of the improvements before they fully upgrade to the new API. Opportunity of major version bumps was taken to break tight coupling and remove unused code.
+New major versions of [rpcclient](https://github.com/decred/dcrd/pull/1807), [database](https://github.com/decred/dcrd/pull/1799), [blockchain/stake](https://github.com/decred/dcrd/pull/1803) and [dcrjson](https://github.com/decred/dcrd/pull/1779) modules were introduced to take advantage of recent improvements in other modules. The new dcrjson module saw a significant overhaul, while retaining a backwards compatible API. This will allow consumer modules to pick up the majority of the improvements before they fully upgrade to the new API. Opportunity of major version bumps was taken to break tight coupling and remove unused code.
 
 A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code generation issues was added to avoid the explosion of binary size of chaincfg/v2 module.
 
@@ -25,25 +23,25 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 [Decrediton](https://github.com/decred/decrediton): Bug fixes and small UI improvements. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
 
-[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog, from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for git. tlog will improve scalability, allow records to be timestamped individually, and will allow for the a switch to a filesystem like [IPFS](https://ipfs.io) in future.
+[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog (from Google's open source [Trillian](https://github.com/google/trillian)) data store on the backend as a replacement for Git. tlog will improve scalability, allow records to be timestamped individually, and will allow to switch to a filesystem like [IPFS](https://ipfs.io) in future.
 
-Login by email has been [replaced](https://github.com/decred/politeia/pull/940) to use username in the Contractor Management System (CMS), and will be deployed on Politeia during the next update. 
+Login by email has been [replaced](https://github.com/decred/politeia/pull/940) to use username as part of the effort to make [email optional](https://github.com/decred/politeia/issues/554) and will be deployed on Politeia during the next update.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): bug fixes, UI and performance improvements. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) to see if it is healthy. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
+[dcrstakepool](https://github.com/decred/dcrstakepool): UI and performance improvements, bug fixes. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) as a health indicator. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
 
-Raedah Group has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of accountless VSPs, which will greatly simplify the staking setup process for new users ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
+Raedah Group has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP authentication APIs. This will enable the use of [accountless VSPs](https://github.com/decredcommunity/issues/issues/100), which will greatly simplify the staking setup process for new users ([discussion](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)). 
 
-[dcrlnd](https://github.com/decred/dcrlnd): upstream changes from [lnd](https://github.com/lightningnetwork/lnd) have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199), and private dev branches are mostly in sync with the upstream lnd master branch. The latest upstream [pull request](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00) to be reviewed was submitted to lnd on July 25th.
+[dcrlnd](https://github.com/decred/dcrlnd): Upstream changes from [lnd](https://github.com/lightningnetwork/lnd) have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199), and private dev branches are mostly in sync with the upstream lnd master branch. The latest upstream [pull request](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00) to be reviewed was submitted to lnd on Jul 25.
 
-The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form for generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
+The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form for generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of continuous integration. Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
 
-[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and UI optimizations, as well as the ability to [rename accounts](https://github.com/decred/dcrandroid/pull/386). 
+[dcrandroid](https://github.com/decred/dcrandroid): Minor UI optimizations and bug fixes, as well as the ability to [rename accounts](https://github.com/decred/dcrandroid/pull/386). 
 
 Work is in progress to add [biometric authentication](https://github.com/decred/dcrandroid/pull/343), [sound and vibration](https://github.com/decred/dcrandroid/pull/399) to notifications, and a [stats page](https://github.com/decred/dcrandroid/pull/397).
 
-[dcrios](https://github.com/raedahgroup/dcrios): Bug fixes and UI optimizations, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498) and [Portuguese](https://github.com/raedahgroup/dcrios/pull/497).
+[dcrios](https://github.com/raedahgroup/dcrios): UI optimizations and bug fixes, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498) and [Portuguese](https://github.com/raedahgroup/dcrios/pull/497).
 
-[dcrdata](https://github.com/decred/dcrdata): Beta v5.1 is now [live](https://beta.dcrdata.org/) {link to release notes if they arrive}. This release adds numerous UI enhancements, including the addition of fiat and percent values to the [markets dashboard](https://github.com/decred/dcrdata/pull/1487), new [styling](https://github.com/decred/dcrdata/pull/1446) on the proposal page, a [tweak](https://github.com/decred/dcrdata/pull/1448) to the "predicted" coin supply chart, fullscreen [address chart](https://github.com/decred/dcrdata/pull/1443) (useful for [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) address), and a [progress bar](https://github.com/decred/dcrdata/pull/1447) for ticket revocations.
+[dcrdata](https://github.com/decred/dcrdata): Beta v5.1 is now [live](https://beta.dcrdata.org/) {link to release notes if they arrive}. This release adds numerous UI enhancements, including the [addition](https://github.com/decred/dcrdata/pull/1487) of fiat and percent values to the [markets dashboard](https://explorer.dcrdata.org/market), new [styling](https://github.com/decred/dcrdata/pull/1446) on the [proposal page](https://explorer.dcrdata.org/proposal/decentralized-exchange-specification-document), a [tweak](https://github.com/decred/dcrdata/pull/1448) to the "predicted" coin supply chart, fullscreen [address chart](https://github.com/decred/dcrdata/pull/1443) (useful for [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) address), and a [progress bar](https://github.com/decred/dcrdata/pull/1447) for ticket revocations.
 
 The Insight API has received some attention, with improvements to the [address endpoint](https://github.com/decred/dcrdata/pull/1438), several bug fixes, and [increasing](https://github.com/decred/dcrdata/pull/1481) the maximum number of client connections from 1,000 to 16,384.
 
@@ -53,13 +51,13 @@ Changes in dcrd have been [incorporated](https://github.com/decred/dcrdata/pull/
 
 Work continues to finish removing [sqlite](https://github.com/decred/dcrdata/pull/1480). 
 
-Raedah Group continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Demo of the live data is available at [here](http://dcrextdata.raedahgroup.com/).
+Raedah Group continues work on [dcrextdata](https://github.com/raedahgroup/dcrextdata), a package for collecting external (off-chain) data not yet found on dcrdata. Progress has been made on collecting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW pools and VSPs, which will allow a historical record of these attributes to be maintained. Demo of the live data is available [here](http://dcrextdata.raedahgroup.com/).
 
 Other:
 
 * Draft of the DEX specification has been released and added to the new [dcrdex](https://github.com/decred/dcrdex) repository.
 * Raedah Group is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
-* [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
+* [Bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
 * {mention webwallet no longer supported, add links}
 
 Dev activity stats for July: 51 active PRs, 219 master commits, 50K added and 29K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository.
@@ -79,12 +77,12 @@ Decred Australia community has been building nicely. An [update](https://medium.
 
 Community stats as of Aug 1:
 
-* Politeia users: 154 (-35, adjusted by new more accurate method of counting)
+* Politeia users: 154 (-35, adjusted by new more accurate counting method)
 * Twitter followers: 40,572 (+93)
 * Reddit subscribers: 9,556 (+51)
 * Matrix users: 384 (+20)
 * Slack users: 6,809 (+40)
-* Discord users: 2377 (+67), verified to post: 281 (+35)
+* Discord users: 2,377 (+67), verified to post: 281 (+35)
 * Telegram users: 3,290 (-115)
 * YouTube subscribers: 3,800 (+13)
 * Facebook followers: 3,253 (+23), likes: 2,983 (+19)
@@ -101,7 +99,7 @@ In July, 2 new proposals were submitted {update status upon release}:
 
 * [TinyDecred: A Python Toolkit for Decred](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) by @buck54321, a contractor working on dcrdata for the last year, requests $8,000 for work already completed on TinyDecred, a set of tools for interacting with the Decred blockchain in Python.
 
-[Issue 19](https://medium.com/politeia-digest/issue-19-june-30-july-31-2019-c591fcb79d98) of Politeia Digest has more detail on July's proposal activity.
+[Issue 19](https://medium.com/politeia-digest/issue-19-june-30-july-31-2019-c591fcb79d98) of Politeia Digest has more detail on July's proposal activity and discussions.
 
 A [dataset](https://github.com/RichardRed0x/pi-research/blob/master/data/comments-and-updown-votes/pi-users.csv) and [short report](https://github.com/RichardRed0x/pi-research/blob/master/analysis/comments-and-updown-votes/users-review.md) has been prepared which aggregates the Politeia data on the basis of username, producing accurate figures for how often each user has commented and voted, and how well their comments have scored. 
 
@@ -109,7 +107,7 @@ A [dataset](https://github.com/RichardRed0x/pi-research/blob/master/data/comment
 
 Hashrate: July's hashrate opened at ~503 Ph/s and closed ~583 Ph/s, bottoming at 319 Ph/s and peaking at 687 Ph/s throughout the month. Pool hashrate distribution as of Aug 2: F2Pool 21%, UUPool 19%, lab.antpool.com 16.5%, Poolin 9.5%, BTC.com 7.3%, Luxor 2.2%, BeePool 0.14%, Coinmine 0.12%, suprnova 0.08% and others 24% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Sharp drop in hashrate from 550 to 319 Ph/s was observed on Jul 5 according to dcrstats.com, followed by a quick recovery after ~20 hours. There was a long [discussion](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156238052013967KGajR:decred.org) on the possible reasons for the drop and on its [accuracy](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156245221914434sRKEL:decred.org). 
+Sharp drop in hashrate from 550 to 319 Ph/s was observed on Jul 5 according to dcrstats.com, followed by a quick recovery within ~20 hours. There was a long [discussion](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156238052013967KGajR:decred.org) on the possible reasons for the drop and on its [accuracy](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156245221914434sRKEL:decred.org). 
 
 Staking: 30-day average ticket price was 125.8 DCR (+5.8) per dcrstats.com. The price varied between 118.8-129.5 DCR. Locked amount was 4.83-5.06 million DCR, which corresponded to 48.25-49.84% of the available supply.
 
@@ -118,9 +116,9 @@ The ticket price got to the highest levels (129.46) since the difficulty algorit
 Historical charts of [VSP data](https://charts.dcr.farm/d/000000016/proof-of-stake-pools?orgId=1&from=1514764800000&to=now) are available at dcr.farm. Similar data was recently made available via the [dcrextdata](http://dcrextdata.raedahgroup.com/) prototype, but dcr.farm has data since Jan 2018. Setting long time interval reveals interesting trends in VSP competition:
 
 * dcr.stakeminer.com bottomed at 14% in June and since recovered above 15% of live tickets
-* stakey.net grew from 2.8% to 6.9% live tickets in 2019 which correlats with the increase of its user count from 300 to 500
+* stakey.net grew from 2.8% to 6.9% live tickets in 2019 which correlates with the increase of its user count from 300 to 500
 * megapool grew to 3.5% since inception in Oct 2018
-* tokensmart had a dynamic history: it grew to 2% since inception in Apr 2018, went down to 0.8% in Apr 2019, then a quick rise to nearly 3% in June, followed by another decline to 0.8%
+* tokensmart had a bumpy road: since inception in Apr 2018 it grew to 2%, went down to 0.8% in Apr 2019, then a quick rise to nearly 3% in June, followed by another decline to 0.8%
 
 The chart of moving average of missed ticket proportion is interesting too and can be useful for choosing a VSP.
 
@@ -130,11 +128,11 @@ As of Aug 2, the DCR [testnet LN](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-
 
 ## Integrations
 
-[Everstake](https://everstake.one/), provider of staking services, [announced](https://medium.com/everstake/welcome-decred-voting-on-everstake-b2d0371426ad) the launch of their Decred VSP at [decred.everstake.one](https://decred.everstake.one/)
+[Everstake](https://everstake.one/), provider of staking services, [announced](https://medium.com/everstake/welcome-decred-voting-on-everstake-b2d0371426ad) the launch of their Decred VSP at [decred.everstake.one](https://decred.everstake.one/).
 
 [Exodus](https://www.exodus.io/) wallet [gained](https://twitter.com/exodus_io/status/1148593861549334528) Trezor support for managing and exchanging of DCR.
 
-[Vertbase](https://www.vertbase.com/), a DCR exchange with fiat gateway, [announced](https://twitter.com/vertbase/status/1147840898564120577) that they will be starting a foundation. An interesting event in the space, the foundation will donate to projects' development and have its board constructed of volunteer core team members from the projects that Vertbase lists and supports.
+[Vertbase](https://www.vertbase.com/), a DCR exchange with fiat gateway, [announced](https://twitter.com/vertbase/status/1147840898564120577) that they will be starting a foundation. An interesting event in the space, the foundation will donate to the development of projects that Vertbase lists and supports, and have its board constructed of volunteer core team members from these project.
 
 [MixinNetwork](https://twitter.com/Mixin_Network/status/1153272304790433793) integrated Decred. From their [website](https://mixin.one/), "Mixin is a publicly distributed ledger aimed to help other publicly distributed ledgers gain trillions of TPS, achieve sub second final confirmations, zero transaction fees, enhanced privacy, and unlimited extensibility.".
 
@@ -144,16 +142,17 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 Portuguese unprocessed honeybee products maker DrApis [announced](https://twitter.com/drapiscom/status/1146539277028909058) that they accept DCR.
 
-Blockhead Capital [announced](https://twitter.com/jyashouafar/status/1152238301593657344) their investment in Decred and shared their [research paper](https://www.blockheadcap.com/post/decred-investment-thesis). Their conclusion:
+Blockhead Capital [announced](https://twitter.com/jyashouafar/status/1152238301593657344) their investment in Decred and shared a [research paper](https://www.blockheadcap.com/post/decred-investment-thesis). Their conclusion:
 
 > Decred is an adaptive cryptocurrency with a rigid monetary policy. The rigid monetary policy provides the base required to achieve monetary premium while the adaptive nature of its on-chain governance allows for integration of more dynamic features. The hybrid consensus mechanism creates adequate checks and balances between the various ecosystem parties while eliminating contentious hardforks as the primary method to resolve disputes - a highly desirable feature for an aspiring global reserve asset. Further, the hybrid consensus creates for more secure blockspace, making the blockspace more valuable, and provides for a more censorship resistant currency. Decred iterates on Bitcoin’s strengths and shores up many of its shortcomings, putting it in a position to complement or compete with it as a digital store of value. 
 
 ## Outreach
+
 Infrastructure continued to build in July that will help Decred streamline outreach and education. The website is close to complete, and should be live by the end of August with new subpages on Decred's Security, Adaptability, Self-Funding, and History. Additionally, we've agreed upon a schema and are currently assembling a resource repository building on Max Bronstein's [Canon](https://github.com/maxbron08/Decred-Canon) that will help form a natural funnel of learning for people taking the #DecredChallenge. 
 
 In order to achieve this, we're slightly refining the messaging, focusing largely on the fundamental principles of Decred, as all messaging flows from there. That will appear in chat within the next week for community input. Other resources for the community that have been released include the Social Media Playbook, featuring best practices for how to engage with others in a constructive way that reflects well on Decred and helps educate others about the project. 
 
-Additionally, a Community Organizer Handbook will be shared for community input shortly. This well help clarify roles and responsibilities in order to gain alignment, improve efficiency, and share best practices around the world. Along these lines, Decred is looking for geographic marketing leads to help run areas of the world. Various proposals from different regions are in the works, and should hit Politeia in the next couple of months. We are still looking for leaders in Europe and Asia, so join us in #Marketing or #DCR Local Ops in Matrix to discuss helping to decentralize the organization.
+Additionally, a Community Organizer Handbook will be shared for community input shortly. This well help clarify roles and responsibilities in order to gain alignment, improve efficiency, and share best practices around the world. Along these lines, Decred is looking for geographic marketing leads to help run areas of the world. Various proposals from different regions are in the works, and should hit Politeia in the next couple of months. We are still looking for leaders in Europe and Asia, so join us in #marketing or #local\_ops in Matrix to discuss helping to decentralize the organization.
 
 We're also working to coordinate a week-long events blitz in October featuring various Decred community members in some of the most important cities across Asia. Details should be released within the next month.
 
@@ -170,7 +169,7 @@ Ditto's July achievements:
 * Staffed an interview between @jy-p and Alessandra Sollberger, who is writing a book called Blockchain Mavericks.
 * Secured an article in financial advisory newsletter, Legacy Research, as a result of an interview we hosted with @moo31337.
 * Secured a 10-minute segment on [BlockTV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance) with @jy-p discussing his take on Libra and how Decred's progress towards becoming a DAO. 
-* Secured publication of @jy-p's byline on Libra in [CCN](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
+* Secured publication of @jy-p's byline on Libra in [CCN](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/).
 * Worked with the community to amplify/engage with the [#DEX tweet storm](https://twitter.com/decredproject/status/1156652694502817793) announcing Decred's DEX spec.
 * Began a messaging refresh, adding FAQs to counter common misunderstandings. 
 * Put the finishing touches on the schema for an educational resources repository for the Decred website that makes it easier for journalists and newbies to find out about us in one place. 
@@ -181,16 +180,16 @@ Ditto's July achievements:
 
 Attended:
 
-* Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico. Ana Dalia [represented](https://twitter.com/AnaDaliacd23/status/1146873685229416450) Decred. After the conference there was a Decred-sponsored [dinner](https://twitter.com/Decred_ES/status/1147522846513618945).
+* Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico. Ana Dalia [represented](https://twitter.com/AnaDaliacd23/status/1146873685229416450) Decred. After the conference there was a [dinner](https://twitter.com/Decred_ES/status/1147522846513618945) sponsored by Decred.s
 * Jul 10 - [Decred meetup](https://twitter.com/Decred_BR/status/1147201276058505216) - São Paulo, Brazil. Organized by @guisso.
-* Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic "managed to charm the organizer to slot in a decred video and particpated in the roundtable discussion". Organized by @BlockBeatsChina. ([photos](https://twitter.com/DecredCN/status/1148983482732830720))
+* Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic "managed to charm the organizer to slot in a Decred video and particpated in the roundtable discussion". Organized by @BlockBeatsChina. ([photos](https://twitter.com/DecredCN/status/1148983482732830720))
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584) - New York, USA. Fireside chat with @joshuam, co-hosted by Staked and TokenTax.
 * Jul 19 {correct?} - Meetup - Buenos Aires, Argentina. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
 * Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic. {any notes?}
 * Jul 25 - [Computational Law + Blockchain Festival CDMX 2019](https://twitter.com/LegalHackersMX/status/1153832499333795840) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project.
-* Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. A detailed [report](https://github.com/decredcommunity/events/pull/7) by Duyen Em suggest that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. {update report link after merge}
+* Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. A detailed [report](https://github.com/decredcommunity/events/pull/7) by Duyen Em suggests that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. {update report link after merge}
 * Jul 28 - Vietnam Staking Economy - Ho Chi Minh City, Vietnam. Duyen Em represented Decred and answered questions to many young people interested in cryptocurrencies. The details are in the [report](https://github.com/decredcommunity/events/pull/7) for Cointime Summit. {update link after merge}
-* Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) pre-summit meetup - Mexico City, Mexico. @elian represented the project and [gave a talk](https://twitter.com/elianhuesca/status/1157313830969630725) on Decred at the pre-summit meetup. The summit will start on Nov 13.
+* Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) preliminary meetup - Mexico City, Mexico. @elian represented the project and [gave a talk](https://twitter.com/elianhuesca/status/1157313830969630725) on Decred. The summit will start on Nov 13.
 
 Upcoming:
 
@@ -207,8 +206,8 @@ Upcoming:
 
 Selected articles:
 
-* Decred: What Gold And Bitcoin Wanted To Be by Pascal Thellmann ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
-* Monetary premiums, can altcoins compete with Bitcoin? by @\_Checkmatey\_ ([medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
+* Decred: What Gold and Bitcoin Wanted to Be by Pascal Thellmann ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
+* Monetary Premiums, Can Altcoins Compete with Bitcoin? by @\_Checkmatey\_ ([medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
 * Libra: Friend or Foe? by @jy-p ([ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/))
 * Bitcoin & Decred / Historical Documents of a Digital Financial Revolution by BlackBearXVII ([medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
 * Sovereign (Crypto) Networks by Joel Monegro ([placeholder.vc](https://www.placeholder.vc/blog/2019/7/31/lvhpfydo4m3uoezhwhicyxo06og0mn)) - mentions Decred as an example
@@ -222,13 +221,13 @@ Translations:
 
 Videos:
 
-* Libra: Friend or Foe? @jy-p interview on [Block TV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance)
+* Libra: Friend or Foe? - @jy-p interview on [Block TV](https://blocktv.com/watch/2019-07-30/5d404e65ea3f5-decred-s-jake-yocom-piatt-talks-decentralized-governance)
 * Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k)) {video removed by the user?}
 
 Audio:
 
 * Decred in Depth Ep. 4 Murad Mahmudov - DCR Investment Thesis + SoV Narrative + Crypto Economics ([libsyn](https://decredindepth.libsyn.com/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics-0), [soundcloud](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics), [twitter](https://twitter.com/decredproject/status/1150836740665552896))
-* Decred in Depth Ep. 5 Permabull Nino - Decred As Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0), [twitter](https://twitter.com/decredproject/status/1157000762611896320))
+* Decred in Depth Ep. 5 Permabull Nino - Decred as Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0), [twitter](https://twitter.com/decredproject/status/1157000762611896320))
 * POV Crypto: Decred: Splitting the Difference Between Bitcoin and Ethereum with Luke Powell ([medium](https://medium.com/@TrustlessState/decred-splitting-the-difference-between-bitcoin-and-ethereum-with-luke-powell-758cf6e1218d), [libsyn](http://povcryptopod.btc.libsynpro.com/decred-splitting-the-difference-between-bitcoin-and-ethereum))
 * The Sound Money Podcast: On-Chain Atomic Swaps with @joshuam ([spotify](https://open.spotify.com/episode/1SuzMUUmtm6xR7ofGN6t4a), [itunes](https://podcasts.apple.com/us/podcast/the-sound-money-podcast/id1470774235?i=1000443695629))
 
@@ -236,7 +235,7 @@ Audio:
 
 Comm systems news:
 
-* [chat.decred.org](https://chat.decred.org/) now hosts the Riot web client for the Matrix protocol. There are multiple [advantages](https://github.com/decredcommunity/issues/issues/62) of self-hosted Riot. The most visible one is that the link is easy to remember and sets one up faster than the [onboarding page](https://decred.org/matrix/) - new people were often confused about setting the homeserver correctly. Less obvious benefit is resilience during incidents like the matrix.org server compromise reported [in April](201904.md): chat.decred.org adds one more way to access the Matrix network. Finally, the [privacy](https://github.com/decredcommunity/issues/issues/25) is increased by removing Google recaptcha fingerprinting from the registration page and reducing the traffic to external domains. Not every project can afford to self-host such infrastructure and be autonomous. Huge thanks to our admin wizards.
+* [chat.decred.org](https://chat.decred.org/) now hosts the Riot web client for the Matrix protocol. There are multiple [advantages](https://github.com/decredcommunity/issues/issues/62) of self-hosted Riot. The most visible one is that the link is easy to remember and sets you up faster than the [onboarding page](https://decred.org/matrix/) - new people were often confused about setting the homeserver correctly. Less obvious benefit is that it helps to stay connected during incidents like the matrix.org server compromise reported [in April](201904.md). Finally, the [privacy](https://github.com/decredcommunity/issues/issues/25) is increased by removing Google recaptcha fingerprinting from the registration page and reducing the traffic to external domains. Not every project can afford to self-host such infrastructure and be autonomous. Huge thanks to our admin wizards.
 * Riot users are now enjoying reactions and can edit their messages, following the [release](https://medium.com/@RiotChat/%EF%B8%8Fmessage-editing-%EF%B8%8F-reactions-5cffec8f71a2) of new versions. Riot users please be aware that editing your messages will replay them across the bridge to people using Slack and Discord.
 
 Selected topics:
@@ -330,6 +329,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: bee, degeri, lukebp, raedah, richardred, s\_ben
+* writing and editing: bee, cryptoleslie, degeri, Dustorf, lukebp, raedah, richardred, s\_ben
 * reviews and feedback: chappjc, davecgh, jholdstock, matheusd
 * title image: {}
