--- a/journal/201907.md
+++ b/journal/201907.md
@@ -183,7 +183,7 @@ Attended:
 * Jul 10 - [Decred meetup](https://twitter.com/Decred_BR/status/1147201276058505216) - São Paulo, Brazil. Organized by @guisso.
 * Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - Beijing, China. @Dominic "managed to charm the organizer to slot in a Decred video and particpated in the roundtable discussion". Organized by @BlockBeatsChina. ([photos](https://twitter.com/DecredCN/status/1148983482732830720))
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584) - New York, USA. Fireside chat with @joshuam, co-hosted by Staked and TokenTax.
-* Jul 19 {correct?} - Meetup - Buenos Aires, Argentina. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
+* Jul 19 - Meetup - Buenos Aires, Argentina. The meetup was a preparation for the upcoming Crypto Monday on Aug 12. [@Camilolwi](https://twitter.com/Camilolwi) [presented](https://twitter.com/cryptorocketok/status/1152260099072778240) Decred. Hosted by [Crypto Rocket Group](https://twitter.com/cryptorocketok). 
 * Jul 21 - [OKEx meetup](https://twitter.com/wanbihou/status/1151704823533723648) - Qingdao, China. Chat with @Dominic. {any notes?}
 * Jul 25 - [Computational Law + Blockchain Festival CDMX 2019](https://twitter.com/LegalHackersMX/status/1153832499333795840) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project.
 * Jul 25-26 - Cointime Summit 2019 - Ho Chi Minh City, Vietnam. Duyen Em introduced Decred to individuals in the conference area. Some guest speakers from other projects were already familiar and spoke highly of Decred, but most Vietnamese speakers are just learning about it. A detailed [report](https://github.com/decredcommunity/events/pull/7) by Duyen Em suggests that Decred deserves a much bigger presence in the thriving cryptocurrency space of Vietnam and shares ideas for establishing connections and growing the community. {update report link after merge}
