Add image from StakingCon

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -1,6 +1,8 @@
 # {DRAFT} Decred Journal – July 2019
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![Image: Staking discussion at StakingCon 2019 in Beijing](../img/stakingcon2019-384.jpg)
+
+_Image: Staking discussion at StakingCon 2019 in Beijing_
 
 Major news of July:
 
